[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
description = "Ergonomic blue noise (poisson disk sampling) for the masses."
edition = "2018"
homepage = "https://crates.io/crates/bluenoise"
keywords = ["noise", "poisson", "blue"]
license = "MIT OR Apache-2.0"
name = "bluenoise"
readme = "readme.md"
repository = "https://github.com/arlyon/bluenoise-rs"
version = "0.1.1"

[dependencies]
glam = "0.9.3"
itertools = "0.9.0"
rand = {version = "0.7.3", features = ["small_rng"]}
rand_pcg = "0.2.1"

[dev-dependencies]
clippy = "0.0.302"
criterion = "0.3.3"

[[bench]]
harness = false
name = "basic"
