[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
description = "Ergonomic blue noise (poisson disk sampling) for the masses."
edition = "2018"
homepage = "https://crates.io/crates/bluenoise"
keywords = ["noise", "poisson", "blue"]
license = "MIT OR Apache-2.0"
name = "bluenoise"
readme = "readme.md"
repository = "https://github.com/arlyon/bluenoise-rs"
version = "0.1.2"

[dependencies]
glam = "0.11.0"
itertools = "0.10.0"
rand = { version = "0.8.0", features = ["small_rng"] }

[dev-dependencies]
clippy = "0.0.302"
criterion = "0.3.3"
rand_pcg = "0.3.0"

[[bench]]
harness = false
name = "basic"
