[package]
authors = ["Alexander Lyon <arlyon@me.com>"]
description = "Ergonomic blue noise (poisson disk sampling) for the masses."
edition = "2024"
homepage = "https://crates.io/crates/bluenoise"
keywords = ["noise", "poisson", "blue"]
license = "MIT OR Apache-2.0"
name = "bluenoise"
readme = "readme.md"
repository = "https://github.com/arlyon/bluenoise-rs"
version = "0.2.2"

[dependencies]
glam = "0.30.8"
itertools = "0.14.0"
rand = { version = "0.9.0", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.7.0"
rand_pcg = "0.9.0"

[[bench]]
harness = false
name = "basic"
